--- a/projects.html
+++ b/projects.html
@@ -350,6 +350,17 @@
         section a {
             color: var(--link-color);
         }
+        .paper-item {
+            margin-bottom: 15px;
+        }
+        .paper-title {
+            font-weight: normal;
+        }
+        .paper-authors {
+            color: var(--paper-authors);
+            font-size: 0.95em;
+            margin-left: 2em;
+        }
         .theme-toggle {
             background: transparent;
             border: 1px solid #fff;
