--- a/papers.html
+++ b/papers.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Xi Zhang's Academic Page</title>
+    <link rel="icon" type="image/png" href="imgs/favicon.png">
     <style>
         :root {
             --bg-color: #ffffff;
