--- a/projects.html
+++ b/projects.html
@@ -454,7 +454,7 @@
         </div>
         <div class="footer-col">
             <a href="mailto:oca-john@hotmail.com">&#x1F4E8; Email</a>
-            <a href="https://twitter.com/Xi_Zhang_2024"><img src="imgs/twitterx.png" style="height: 18px; width: auto;"/> X / <img src="imgs/twitter.png" style="height: 18px; width: auto;"/> Twitter</a>
+            <a href="https://twitter.com/Xi_Zhang_2024"><img src="imgs/twitter.png" style="height: 18px; width: auto;"/> Twitter</a>
         </div>
         <div class="footer-copyright">
             <span data-i18n="copyright">Designed and built by Xi Zhang. Feel free to cite or fork.</span> &emsp; © <span id="currentYear"></span>
